--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,172 +1,377 @@
-<section class="teaching-section">
-  <h1 class="section-title">Teaching Experience</h1>
+<section class="teaching">
+  <header class="teaching__header">
+    <h1 class="teaching__title">Teaching</h1>
+    <p class="teaching__subtitle">
+      Courses I have taught and supervised (selected). Slides and materials are linked when available.
+    </p>
+  </header>
 
-  <!-- ITU Istanbul Course -->
-  <div class="course-card">
-    <h2 class="course-title">Deep Learning (Postgraduate), Fall 2025, ITU Istanbul</h2>
-    <p class="role">Role: Main Lecturer</p>
-    <p class="description">
-      A 12-week postgraduate course on deep learning fundamentals and modern architectures, emphasizing theory, 
-      implementation, and research discussions. The course combines weekly lectures, coding sessions, and project work using PyTorch.
+  <!-- Course 1 -->
+  <article class="course">
+    <div class="course__top">
+      <h2 class="course__title">Deep Learning (Postgraduate) — Fall 2025 — ITU Istanbul</h2>
+      <div class="course__meta">
+        <span class="badge">Main Lecturer</span>
+        <span class="meta">12 weeks • lectures + coding + project (PyTorch)</span>
+      </div>
+    </div>
+
+    <p class="course__desc">
+      A 12-week postgraduate course covering fundamentals and modern deep learning architectures with emphasis on
+      theory, implementation, and research discussions. Includes weekly lectures, coding sessions, and a final project.
     </p>
 
-    <ul class="syllabus">
-      <li>
-        <strong>Week 1:</strong> Introduction to Deep Learning  
-        <br><a href="https://drive.google.com/file/d/1ObKi60EhRLMDAGRcCefUSFlOCJwHVQK4/view?usp=sharing" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
-      </li>
-      <li>
-        <strong>Week 2:</strong> Unsupervised Feature Learning as a Gateway to CNNs 
-        <br><a href="https://drive.google.com/file/d/1m5hwo67Rh684qEtzRPNBOV97obkArmLn/view?usp=sharing" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
-      </li>
-      <li>
-        <strong>Week 3:</strong> Convolutional Neural Networks (CNNs)  
-        <br><a href="https://drive.google.com/file/d/1hn9lQJWfaI1mPqkAhgiHWyT2K89k0gIr/view?usp=sharing" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
-      </li>
-      <li>
-        <strong>Week 4:</strong> Sequence Modeling — RNNs and LSTMs  
-        <br><a href="https://drive.google.com/file/d/1y_ZWsWF4F9IiHwSDG_u4mijc7ynnXSWK/view?usp=sharing" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
-      </li>
-      <li>
-        <strong>Week 5:</strong>  Transformers  
-        <br><a href="https://drive.google.com/file/d/1H2hzc5nBDPoLomXzb79rQk7NodN5zdTV/view?usp=sharing" class="slides-link">📘 Slides</a>| <a href="#" class="video-link">🎥 Lecture Video</a>
-      </li>
-      <li>
-        <strong>Week 6:</strong> Large Language Models, MOE, DeepSeek 
-        <br><a href="https://drive.google.com/file/d/1nvmmuiXEC1D6UpGWKJyuimW0zWGnAEiy/view?usp=sharing" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
-      </li>
-      <li>
-        <strong>Week 7:</strong> Generative Modeling (AE, VAE, GANs)
-        <br><a href="https://drive.google.com/file/d/18yBzFruU3qmtuD5LM8Ww1DkemQTB-_sW/view?usp=sharing"" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
-      </li>
-      <li>
-        <strong>Week 8:</strong> Generative Modeling-
-Autoregressive model
-        <br><a href="https://drive.google.com/file/d/1ELpMxgHBJzWGozhpX4FfbKN7WRwVXxlv/view?usp=sharing" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
-      </li>
-      <li>
-        <strong>Week 9:</strong> Introduction to Normalizing
-Flows and SDE 
-        <br><a href="https://drive.google.com/file/d/1kp1dkEOIDb_1iDvQrEfA302q6idm6HR5/view?usp=sharing" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
-      </li>
-      <li>
-        <strong>Week 10:</strong> Self-Supervised Leanirng  
-        <br><a href="https://drive.google.com/file/d/1kaf1rdiXZNJGfXL1tLFDHB68Gr3mKvUJ/view?usp=sharing" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
-      </li>
-      <li>
-        <strong>Week 11:</strong> Research Topics, Applications & Final Project Presentations  
-        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
-      </li>
-      <li>
-        <strong>Week 12:</strong> Research Topics, Applications & Final Project Presentations  
-        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
-      </li>
-    </ul>
-  </div>
+    <details class="course__details" open>
+      <summary class="course__summary">
+        Syllabus & materials
+        <span class="course__summaryHint"> (click to collapse)</span>
+      </summary>
 
-  <!-- IPM Deep Learning -->
-  <div class="course-card">
-    <h2 class="course-title">Deep Learning (Postgraduate), 2019–2021, IPM</h2>
-    <p class="role">Role: Main Lecturer</p>
-    <p class="description">
-      A 16-week course with two 1.5-hour sessions per week, covering classical machine learning,
-      representation learning, autoencoders, CNNs, LSTMs, GANs, and advanced topics like zero-shot learning and model robustness.
-    </p>
-  </div>
+      <ol class="weeks">
+        <li class="week">
+          <div class="week__row">
+            <span class="week__label">Week 1</span>
+            <span class="week__topic">Introduction to Deep Learning</span>
+          </div>
+          <div class="week__links">
+            <a class="link" href="https://drive.google.com/file/d/1ObKi60EhRLMDAGRcCefUSFlOCJwHVQK4/view?usp=sharing">Slides</a>
+            <span class="dot">•</span>
+            <a class="link link--muted" href="#">Lecture video</a>
+          </div>
+        </li>
 
-  <!-- IPM Advanced Topics -->
-  <div class="course-card">
-    <h2 class="course-title">Advanced Topics in AI (Postgraduate), 2019–2021, IPM</h2>
-    <p class="role">Role: Main Lecturer</p>
-    <p class="description">
-      A 16-week course focusing on AI trustworthiness — including safety, security, fairness,
-      bias, transparency, and adversarial robustness. Students participated in paper discussions,
-      research presentations, and implementation projects, with assessments based on seminars, projects, and a final exam.
-    </p>
-  </div>
+        <li class="week">
+          <div class="week__row">
+            <span class="week__label">Week 2</span>
+            <span class="week__topic">Unsupervised Feature Learning as a Gateway to CNNs</span>
+          </div>
+          <div class="week__links">
+            <a class="link" href="https://drive.google.com/file/d/1m5hwo67Rh684qEtzRPNBOV97obkArmLn/view?usp=sharing">Slides</a>
+            <span class="dot">•</span>
+            <a class="link link--muted" href="#">Lecture video</a>
+          </div>
+        </li>
 
-  <!-- IUST Course -->
-  <div class="course-card">
-    <h2 class="course-title">Advanced Topics in AI: Deep Learning Safety and Security (Postgraduate), 2019, Iran University of Science and Technology</h2>
-    <p class="role">Role: Main Lecturer</p>
-    <p class="description">
-      This 16-week course paralleled the “Advanced Topics in AI” course at IPM, focusing specifically on
-      deep learning safety and security, including adversarial attacks and model robustness.
+        <li class="week">
+          <div class="week__row">
+            <span class="week__label">Week 3</span>
+            <span class="week__topic">Convolutional Neural Networks (CNNs)</span>
+          </div>
+          <div class="week__links">
+            <a class="link" href="https://drive.google.com/file/d/1hn9lQJWfaI1mPqkAhgiHWyT2K89k0gIr/view?usp=sharing">Slides</a>
+            <span class="dot">•</span>
+            <a class="link link--muted" href="#">Lecture video</a>
+          </div>
+        </li>
+
+        <li class="week">
+          <div class="week__row">
+            <span class="week__label">Week 4</span>
+            <span class="week__topic">Sequence Modeling — RNNs and LSTMs</span>
+          </div>
+          <div class="week__links">
+            <a class="link" href="https://drive.google.com/file/d/1y_ZWsWF4F9IiHwSDG_u4mijc7ynnXSWK/view?usp=sharing">Slides</a>
+            <span class="dot">•</span>
+            <a class="link link--muted" href="#">Lecture video</a>
+          </div>
+        </li>
+
+        <li class="week">
+          <div class="week__row">
+            <span class="week__label">Week 5</span>
+            <span class="week__topic">Transformers</span>
+          </div>
+          <div class="week__links">
+            <a class="link" href="https://drive.google.com/file/d/1H2hzc5nBDPoLomXzb79rQk7NodN5zdTV/view?usp=sharing">Slides</a>
+            <span class="dot">•</span>
+            <a class="link link--muted" href="#">Lecture video</a>
+          </div>
+        </li>
+
+        <li class="week">
+          <div class="week__row">
+            <span class="week__label">Week 6</span>
+            <span class="week__topic">Large Language Models, MoE, DeepSeek</span>
+          </div>
+          <div class="week__links">
+            <a class="link" href="https://drive.google.com/file/d/1nvmmuiXEC1D6UpGWKJyuimW0zWGnAEiy/view?usp=sharing">Slides</a>
+            <span class="dot">•</span>
+            <a class="link link--muted" href="#">Lecture video</a>
+          </div>
+        </li>
+
+        <li class="week">
+          <div class="week__row">
+            <span class="week__label">Week 7</span>
+            <span class="week__topic">Generative Modeling (AE, VAE, GANs)</span>
+          </div>
+          <div class="week__links">
+            <a class="link" href="https://drive.google.com/file/d/18yBzFruU3qmtuD5LM8Ww1DkemQTB-_sW/view?usp=sharing">Slides</a>
+            <span class="dot">•</span>
+            <a class="link link--muted" href="#">Lecture video</a>
+          </div>
+        </li>
+
+        <li class="week">
+          <div class="week__row">
+            <span class="week__label">Week 8</span>
+            <span class="week__topic">Generative Modeling — Autoregressive Models</span>
+          </div>
+          <div class="week__links">
+            <a class="link" href="https://drive.google.com/file/d/1ELpMxgHBJzWGozhpX4FfbKN7WRwVXxlv/view?usp=sharing">Slides</a>
+            <span class="dot">•</span>
+            <a class="link link--muted" href="#">Lecture video</a>
+          </div>
+        </li>
+
+        <li class="week">
+          <div class="week__row">
+            <span class="week__label">Week 9</span>
+            <span class="week__topic">Normalizing Flows and SDE</span>
+          </div>
+          <div class="week__links">
+            <a class="link" href="https://drive.google.com/file/d/1kp1dkEOIDb_1iDvQrEfA302q6idm6HR5/view?usp=sharing">Slides</a>
+            <span class="dot">•</span>
+            <a class="link link--muted" href="#">Lecture video</a>
+          </div>
+        </li>
+
+        <li class="week">
+          <div class="week__row">
+            <span class="week__label">Week 10</span>
+            <span class="week__topic">Self-Supervised Learning</span>
+          </div>
+          <div class="week__links">
+            <a class="link" href="https://drive.google.com/file/d/1kaf1rdiXZNJGfXL1tLFDHB68Gr3mKvUJ/view?usp=sharing">Slides</a>
+            <span class="dot">•</span>
+            <a class="link link--muted" href="#">Lecture video</a>
+          </div>
+        </li>
+
+        <li class="week">
+          <div class="week__row">
+            <span class="week__label">Week 11</span>
+            <span class="week__topic">Research Topics, Applications & Final Project Presentations</span>
+          </div>
+          <div class="week__links">
+            <a class="link link--muted" href="#">Slides</a>
+            <span class="dot">•</span>
+            <a class="link link--muted" href="#">Lecture video</a>
+          </div>
+        </li>
+
+        <li class="week">
+          <div class="week__row">
+            <span class="week__label">Week 12</span>
+            <span class="week__topic">Final Project Presentations</span>
+          </div>
+          <div class="week__links">
+            <a class="link link--muted" href="#">Slides</a>
+            <span class="dot">•</span>
+            <a class="link link--muted" href="#">Lecture video</a>
+          </div>
+        </li>
+      </ol>
+    </details>
+  </article>
+
+  <!-- Course 2 -->
+  <article class="course">
+    <div class="course__top">
+      <h2 class="course__title">Deep Learning (Postgraduate) — 2019–2021 — IPM</h2>
+      <div class="course__meta">
+        <span class="badge">Main Lecturer</span>
+        <span class="meta">16 weeks • 2×1.5h/week</span>
+      </div>
+    </div>
+
+    <p class="course__desc">
+      Covered classical machine learning, representation learning, autoencoders, CNNs, LSTMs, GANs, and advanced topics
+      such as zero-shot learning and model robustness.
     </p>
-  </div>
+  </article>
+
+  <!-- Course 3 -->
+  <article class="course">
+    <div class="course__top">
+      <h2 class="course__title">Advanced Topics in AI (Postgraduate) — 2019–2021 — IPM</h2>
+      <div class="course__meta">
+        <span class="badge">Main Lecturer</span>
+        <span class="meta">Trustworthiness: safety, security, fairness, transparency</span>
+      </div>
+    </div>
+
+    <p class="course__desc">
+      Focused on trustworthy AI: safety, security, fairness, bias, transparency, and adversarial robustness.
+      Students led paper discussions and implementation projects; assessment was based on seminars, projects, and a final exam.
+    </p>
+  </article>
+
+  <!-- Course 4 -->
+  <article class="course">
+    <div class="course__top">
+      <h2 class="course__title">
+        Advanced Topics in AI: Deep Learning Safety & Security (Postgraduate) — 2019 — Iran University of Science and Technology
+      </h2>
+      <div class="course__meta">
+        <span class="badge">Main Lecturer</span>
+      </div>
+    </div>
+
+    <p class="course__desc">
+      Paralleled the IPM “Advanced Topics in AI” course, with added emphasis on adversarial attacks and model robustness.
+    </p>
+  </article>
 </section>
 
 <style>
-  .teaching-section {
-    font-family: "Inter", "Segoe UI", sans-serif;
-    max-width: 850px;
-    margin: 2rem auto;
-    padding: 2rem;
-    background: #fafafa;
-    border-radius: 1rem;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+  /* Teaching page styling tuned to match a minimal academic homepage */
+  .teaching{
+    --accent: #1f6feb;              /* tweak this if you want a different highlight */
+    --border: rgba(0,0,0,.12);
+    --muted: rgba(0,0,0,.65);
+
+    max-width: 52rem;
+    margin: 0 auto;
+    padding: 1.25rem 1rem 2rem;
   }
 
-  .section-title {
-    font-size: 2rem;
-    font-weight: 700;
-    margin-bottom: 1.5rem;
-    color: #111827;
-    text-align: center;
+  .teaching__header{
+    margin-bottom: 1.25rem;
   }
 
-  .course-card {
-    background: #fff;
-    border-left: 5px solid #2563eb;
-    padding: 1.5rem;
-    border-radius: 0.75rem;
-    margin-bottom: 1.5rem;
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
+  .teaching__title{
+    margin: 0 0 .35rem;
+    font-size: 1.9rem;
+    line-height: 1.2;
   }
 
-  .course-card:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
+  .teaching__subtitle{
+    margin: 0;
+    color: var(--muted);
+    line-height: 1.6;
   }
 
-  .course-title {
-    font-size: 1.3rem;
+  .course{
+    margin-top: 1.25rem;
+    padding: 1rem 1rem 1.05rem;
+    border-left: 3px solid var(--accent);
+    border-top: 1px solid var(--border);
+    border-bottom: 1px solid var(--border);
+  }
+
+  .course__top{
+    display: grid;
+    gap: .35rem;
+  }
+
+  .course__title{
+    margin: 0;
+    font-size: 1.15rem;
+    line-height: 1.35;
+  }
+
+  .course__meta{
+    display: flex;
+    flex-wrap: wrap;
+    gap: .5rem;
+    align-items: center;
+  }
+
+  .badge{
+    display: inline-flex;
+    align-items: center;
+    padding: .18rem .5rem;
+    border: 1px solid var(--border);
+    border-radius: 999px;
+    font-size: .85rem;
+    color: var(--muted);
+  }
+
+  .meta{
+    font-size: .92rem;
+    color: var(--muted);
+  }
+
+  .course__desc{
+    margin: .75rem 0 0;
+    line-height: 1.7;
+    color: var(--muted);
+  }
+
+  .course__details{
+    margin-top: .85rem;
+    padding-top: .5rem;
+    border-top: 1px dashed var(--border);
+  }
+
+  .course__summary{
+    cursor: pointer;
     font-weight: 600;
-    margin-bottom: 0.25rem;
-    color: #1e3a8a;
+    list-style: none;
+    user-select: none;
+  }
+  /* Hide default marker in some browsers */
+  .course__summary::-webkit-details-marker{ display:none; }
+
+  .course__summaryHint{
+    font-weight: 400;
+    color: var(--muted);
   }
 
-  .role {
-    font-weight: 500;
-    color: #444;
-    margin-bottom: 0.5rem;
+  .weeks{
+    margin: .75rem 0 0;
+    padding: 0;
+    list-style: none;
+    display: grid;
+    gap: .75rem;
   }
 
-  .description {
-    color: #555;
-    line-height: 1.6;
-    margin-bottom: 0.75rem;
+  .week{
+    padding: .65rem .75rem;
+    border: 1px solid var(--border);
+    border-radius: .5rem;
   }
 
-  .syllabus {
-    margin-top: 0.75rem;
-    padding-left: 1.2rem;
-    color: #333;
+  .week__row{
+    display: grid;
+    grid-template-columns: 6.25rem 1fr;
+    gap: .6rem;
+    align-items: baseline;
   }
 
-  .syllabus li {
-    margin-bottom: 0.7rem;
-    line-height: 1.6;
+  .week__label{
+    font-weight: 700;
   }
 
-  .slides-link, .video-link {
-    color: #2563eb;
+  .week__topic{
+    line-height: 1.55;
+  }
+
+  .week__links{
+    margin-top: .4rem;
+    font-size: .95rem;
+    color: var(--muted);
+  }
+
+  .link{
+    color: var(--accent);
     text-decoration: none;
+    font-weight: 600;
+  }
+  .link:hover{ text-decoration: underline; }
+
+  .link--muted{
+    color: var(--muted);
     font-weight: 500;
-    margin-right: 0.5rem;
   }
 
-  .slides-link:hover, .video-link:hover {
-    text-decoration: underline;
+  .dot{
+    margin: 0 .35rem;
+    color: var(--muted);
+  }
+
+  @media (max-width: 520px){
+    .week__row{ grid-template-columns: 1fr; }
   }
 </style>
